clear button working

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <!-- nav right -->
 
-            <div class="font-inter-secondary flex flex-col sm:flex-row items-center gap-7">
+            <div class="inter-secondary flex flex-col sm:flex-row items-center gap-7">
                 <div class="flex justify-center items-center gap-3 rounded-full bg-[#41ff6b1a] w-[100px] h-[50px]">
                     <span id="love-count" class=" text-base font-black">0</span>
                     <img class="w-7 h-7" src="./assets/heart.png" alt="">
@@ -51,7 +51,7 @@
                     <img class="w-7 h-7" src="./assets/coin.png" alt="">
                 </div>
 
-                <div class="flex justify-center items-center gap-3 rounded-full bg-[#00a63e] w-[100px] h-[50px]">
+                <div class="flex justify-center items-center gap-3 rounded-full text-[#FFFFFF] bg-[#00a63e] w-[100px] h-[50px]">
                     <span id="copy-count" class="text-base font-bold">0</span><h1 class="text-base font-semibold">Copy</h1>
                 </div>
             </div>
@@ -68,7 +68,7 @@
     <!-- main section  -->
     <main class="max-w-[1800px] mx-auto my-[50px] flex flex-col-reverse md:flex-row gap-[30px] p-[10px]">
         <!-- cards section  -->
-        <div class="cards md:w-3/4 grid grid-cols-1 md:grid-cols-3 gap-[30px]">
+        <div class="cards md:w-9/12 grid grid-cols-1 md:grid-cols-3 gap-[30px]">
             <div class="card flex flex-col bg-white p-6 shadow-md rounded-xl">
                 <div class="flex items-center justify-between mb-4">
                     <div class="w-14 h-14 flex items-center justify-center bg-[#FFE3E2] rounded-lg">
@@ -313,14 +313,14 @@
             </div>
         </div>
         <!-- call history section  -->
-        <div class="flex flex-col md:w-1/4 bg-white p-6 rounded-xl shadow-md">
+        <div class="flex flex-col md:w-3/12 bg-white p-6 rounded-xl shadow-md">
             <!-- heading -->
             <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock text-xl"></i>
                     <h1 class="text-xl font-bold hind-madurai">Call History</h1>
                 </div>
-                <div id="btn-clear" class="py-2 px-6 bg-[#00A63E] hover:bg-green-700 rounded-full cursor-pointer">
+                <div id="clear-btn" class="py-2 px-6 bg-[#00A63E] hover:bg-green-700 rounded-full cursor-pointer">
                     <h1 class="font-bold text-white roboto">Clear</h1>
                 </div>
             </div>
